# src/routes/uploadRoutes.ts
@@ -1,8 +1,8 @@
 /** @format */
-
+import authenticate from "@middlewares/authenticate";
 const router = require("express").Router();
 import { uploadController } from "@controllers/upload/index";
 
-router.post("/", uploadController);
+router.post("/", authenticate, uploadController);
 
 export default router;
